# OlyntheOS-AI-Engine

./: .gitignore  Makefile  README.md  github-actions-ci-workflow.txt  go.mod  go.sum  lumin-engine.service
.github/workflows/: test.yml
cmd/lumin-control-panel/: CMakeLists.txt  IPCClient.qml  main.qml
cmd/lumin-engine/: main.go
cmd/model-wizard/: main.go
contrib/: lumin-engine.service  lumin.socket
internal/agent/: loop.go  parser.go
internal/config/: config.go
internal/context/: manager.go  template.go
internal/hardware/: probe.go  recommend.go  watchdog.go
internal/inference/: generate.go  llama_cgo.go  llama_stub.go  model.go  tokenizer.go
internal/ipc/: handler.go  protocol.go  server.go
internal/permissions/: audit.go  policy.go
internal/tools/: call.go  exec.go  executor.go  fs.go  notify.go  parser.go  plasma.go  result.go  web.go
